--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "css"
   ],
   "author": "Vilmarys Rodriguez",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "4.32.2",
+    "webpack-cli": "3.3.2"
+  }
 }
