--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --entry ./index.js --output ./dist/bundle.js --mode development",
+    "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production"
   },
   "keywords": [
     "webpack",
