--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Vilmarys Rodriguez",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "5.0.1",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2"
   }
