--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --entry ./index.js --output ./dist/bundle.js --mode development",
-    "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production"
+    "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
+    "build-css": "webpack --config ./webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -16,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "5.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2"
   }
