--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --entry ./index.js --output ./dist/bundle.js --mode development",
     "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
-    "build-css": "webpack --config ./webpack.config.js"
+    "build-plugins": "webpack --config ./webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -16,9 +16,11 @@
   "author": "Vilmarys Rodriguez",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "5.0.1",
-    "style-loader": "^2.0.0",
+    "css-loader": "2.1.1",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "style-loader": "0.23.1",
     "webpack": "4.32.2",
-    "webpack-cli": "3.3.2"
+    "webpack-cli": "^3.3.2"
   }
 }
