--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --entry ./index.js --output ./dist/bundle.js --mode development",
     "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
-    "build-plugins": "webpack --config ./webpack.config.js"
+    "build-plugins": "webpack --config ./webpack.config.js",
+    "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -21,6 +22,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "0.23.1",
     "webpack": "4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "3.5.1"
   }
 }
