--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --entry ./index.js --output ./dist/bundle.js --mode development",
     "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
     "build-plugins": "webpack --config ./webpack.config.js",
-    "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
+    "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
+    "build-babel": "webpack-dev-server --config ./babel/webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -24,5 +25,10 @@
     "webpack": "4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "3.5.1"
+  },
+  "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2"
   }
 }
