--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
     "build-plugins": "webpack --config ./webpack.config.js",
     "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
-    "build-babel": "webpack-dev-server --config ./babel/webpack.config.js"
+    "build-babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development"
   },
   "keywords": [
     "webpack",
@@ -18,6 +18,7 @@
   "author": "Vilmarys Rodriguez",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "7.4.4",
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/runtime": "7.4.5",
     "babel-loader": "^8.2.2"
   }
 }
