--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "7.4.4",
+    "@babel/preset-react": "7.12.10",
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -31,6 +32,8 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "7.4.5",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
