--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-local": "webpack --entry ./index.js --output ./bundle.js --mode production",
     "build-plugins": "webpack --config ./webpack.config.js",
     "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
-    "build-babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development"
+    "build-babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
+    "build-react": "webpack-dev-server --config ./react/webpack.config.js --mode development"
   },
   "keywords": [
     "webpack",
@@ -19,7 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-react": "7.12.10",
+    "@babel/preset-react": "^7.0.0",
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -33,7 +34,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "7.4.5",
     "babel-loader": "^8.2.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
