--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build-plugins": "webpack --config ./webpack.config.js",
     "build-dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
     "build-babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
-    "build-react": "webpack-dev-server --config ./react/webpack.config.js --mode development"
+    "build-react": "webpack-dev-server --config ./react/webpack.config.js --mode development",
+    "build-url-loader": "webpack-dev-server --config ./url-loader/webpack.config.js --mode development",
+    "build-styles": "webpack-dev-server --config ./prepro/webpack.config.js --mode development"
   },
   "keywords": [
     "webpack",
@@ -22,9 +24,16 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-react": "^7.0.0",
     "css-loader": "2.1.1",
+    "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
+    "less-loader": "5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "postcss-loader": "3.0.0",
+    "postcss-nested": "4.2.3",
+    "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "stylus-loader": "3.0.2",
+    "url-loader": "1.1.2",
     "webpack": "4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "3.5.1"
@@ -34,7 +43,10 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "7.4.5",
     "babel-loader": "^8.2.2",
+    "less": "^3.9.0",
+    "node-sass": "^4.12.0",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "stylus": "^0.54.5"
   }
 }
